[plugins/clipboard] Check for null mimedata

BUG: 461875